tests/execution_spec/snapshots/execution_spec__test-grpc-optional.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "expected type to be required",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData"
    ],
    "description": null
  }
]
