tests/execution_spec/snapshots/execution_spec__test-grpc-service.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Couldn't find definitions for service news.YourServiceName",
    "trace": [
      "Query",
      "news",
      "@grpc"
    ],
    "description": null
  }
]
