tests/execution_spec/snapshots/execution_spec__test-js-request-reponse.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  hello: String
  hi: String
}

scalar Url

schema {
  query: Query
}
