tests/execution_spec/snapshots/execution_spec__test-missing-query-resolver.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Query",
      "posts"
    ],
    "description": null
  },
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Query",
      "user"
    ],
    "description": null
  }
]
