tests/execution_spec/snapshots/execution_spec__test-missing-schema-query.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "schema definition is missing query root",
    "trace": [],
    "description": null
  }
]
